--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,12 @@
 spring.application.name=final_year_project
+spring.datasource.url=jdbc:duckdb:/Users/moyak/gourmet-buddy.db
+
+spring.datasource.driver-class-name=org.duckdb.DuckDBDriver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.jpa.persistence_provider=org.hibernate.jpa.HibernatePersistenceProvider
+spring.jpa.properties.hibernate.id.new_generator_mappings=false
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
 server.port=8090
