--- a/build.gradle
+++ b/build.gradle
@@ -29,9 +29,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-tomcat:3.4.2'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.hibernate:hibernate-core:6.6.4.Final'
-    implementation 'org.hibernate.orm:hibernate-community-dialects:6.6.4.Final'
-    implementation 'org.duckdb:duckdb_jdbc:1.1.3'
+	implementation 'mysql:mysql-connector-java:5.1.13'
+    implementation 'com.mysql:mysql-connector-j:8.0.33'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
