--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=final_year_project
-spring.datasource.url=jdbc:duckdb:/Users/moyak/gourmet-buddy.db
-
-spring.datasource.driver-class-name=org.duckdb.DuckDBDriver
+spring.datasource.url=jdbc:mysql://localhost:3306/gourmet_buddy_schema
+spring.datasource.username=root
+spring.datasource.password=m00nl1ght
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jpa.persistence_provider=org.hibernate.jpa.HibernatePersistenceProvider
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 server.port=8090
