--- a/gourmet-buddy/package.json
+++ b/gourmet-buddy/package.json
@@ -10,12 +10,13 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
-    "expo": "^52.0.30",
+    "expo": "~52.0.31",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-native": "0.76.6",
+    "react-native": "0.76.7",
     "react-native-elements": "^3.4.3",
     "react-native-paper": "^5.13.1"
   },
