Changed the database to aws hosted database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=final_year_project
-spring.datasource.url=jdbc:mysql://localhost:3306/gourmet_buddy_schema
-spring.datasource.username=root
-spring.datasource.password=m00nl1ght
+spring.datasource.url=jdbc:mysql://gourmet-buddy-db-instance.c1msmo4w4r7f.eu-west-2.rds.amazonaws.com:3306/gourmet_buddy_db
+spring.datasource.username=admin
+spring.datasource.password=un1v3r5alL0v3
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
