--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,6 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.7'
 	id 'war'
 }
-
 group = 'com.project'
 version = '0.0.1-SNAPSHOT'
 
@@ -45,4 +44,8 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+war {
+    exclude 'gourmet-buddy/**'
 }
