Fixed barcode api not working

--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,12 @@ tasks.named('test') {
 	useJUnitPlatform()
 }
 
+ tasks.withType(JavaCompile) {
+        configure(options) {
+            options.compilerArgs << '-parameters'
+        }
+    }
+
 war {
     exclude 'gourmet-buddy/**'
 }
