--- a/gourmet-buddy/package.json
+++ b/gourmet-buddy/package.json
@@ -13,7 +13,7 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
-    "expo": "52.0.42",
+    "expo": "^52.0.46",
     "expo-barcode-scanner": "^13.0.1",
     "expo-camera": "~16.0.18",
     "expo-status-bar": "~2.0.1",
