--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,18 @@ spring.application.name=final_year_project
 spring.datasource.url=jdbc:mysql://gourmet-buddy-db-instance.c1msmo4w4r7f.eu-west-2.rds.amazonaws.com:3306/gourmet_buddy_db
 spring.datasource.username=admin
 spring.datasource.password=un1v3r5alL0v3
+spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.jpa.persistence_provider=org.hibernate.jpa.HibernatePersistenceProvider
+spring.jpa.properties.hibernate.jdbc.batch_size=1000
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
 spring.jpa.show-sql=true
+
+app.csv.path=/data/foodproducts.csv
 
 server.port=8090
